# SQL-Executor-Helper

./: .gitignore  Executor-0.0.1-py3-none-any.whl  Main.py  README.md  config.ini  pyproject.toml  sample.sql  setup.py  test.py  test2.py
Batch Scripts/: Create Virtual Environment.bat  Create_Python_Package.bat
Configs/: Database_Config.ini
Executor/: SQLExecutor.py
Executor/Helpers/: LoggerConfig.py
Helper/: SqlHelper.py
Module/: SQLExecutor.py
Module/Helpers/: DatabaseConfig.py  Logger.py  TestConfig.py
Module/enums/: file_types.py
SQL Files/: sample.sql
Setup/: Build Packages.bat  Create Configs.py  Create Virtual Environment.bat  requirements.txt
Test/: Basic Connection.py  Test.py  Unit Tests.py
Test/SQL Files/: sample.sql
